fix z-index

--- a/assets/sass/_theme/configuration/spacings.sass
+++ b/assets/sass/_theme/configuration/spacings.sass
@@ -25,7 +25,8 @@ $zindex-nav-accessibility: 1010 !default
 $zindex-stretched-link: 2 !default
 $zindex-header: 52 !default
 $zindex-body-overlay: 51 !default
-$zindex-toc: 60 !default
+$zindex-toc-offcanvas: 60 !default
+$zindex-toc: 50 !default
 $zindex-toc-cta: 49 !default
 $zindex-modal: 72 !default
 $zindex-aside: 48 !default
